--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WHAT BIOMATERIAL ARE YOU?</title>
+    <title>BMTI — Biomaterial Type Indicator?</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Space+Grotesk:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -598,7 +598,7 @@
         <div class="page active" id="quiz-page">
             <header id="header">
                 <div class="subtitle">Better than MBTI, honestly</div>
-                <h1>WHAT BIOMATERIAL<br><span>ARE YOU?</span></h1>
+                <h1>BMTI — Biomaterial Type Indicator<br><span>WHAT BIOMATERIAL ARE YOU?</span></h1>
             </header>
 
             <main id="quiz"></main>
