--- a/index.html
+++ b/index.html
@@ -598,7 +598,8 @@
         <div class="page active" id="quiz-page">
             <header id="header">
                 <div class="subtitle">Better than MBTI, honestly</div>
-                <h1>BMTI — Biomaterial Type Indicator<br><span>WHAT BIOMATERIAL ARE YOU?</span></h1>
+                <h1>THE BMTI TEST<br><span>Bio-material Type Indicator?</span></h1>
+                <h2>WHAT BIO-MATERIAL ARE YOU?</h2>
             </header>
 
             <main id="quiz"></main>
