--- a/index.html
+++ b/index.html
@@ -642,11 +642,11 @@
             {
                 question: "It's 2 AM. What are you doing?",
                 options: [
-                    { text: "Deep in a Wikipedia rabbit hole, 47 tabs open", scores: { mycelium: 3, algae: 1 } },
-                    { text: "Finally finishing that project I've been planning for weeks", scores: { clt: 3, rammed_earth: 1 } },
+                    { text: "Deep in a Wikipedia or Youtube rabbit hole, 47 tabs open", scores: { mycelium: 3, algae: 1 } },
+                    { text: "Finally finishing that project I've been planning for forever", scores: { clt: 3, rammed_earth: 1 } },
                     { text: "Hanging out, vibing, maybe a little snack", scores: { hempcrete: 3, rice_straw: 1 } },
-                    { text: "Sleeping soundly, I recover fast", scores: { cork: 3, hempcrete: 1 } },
-                    { text: "Already up, already moving, already productive", scores: { bamboo: 3, clt: 1 } }
+                    { text: "Sleeping soundly!", scores: { cork: 3, hempcrete: 1 } },
+                    { text: "I'm awake, I'm moving, I'm productive", scores: { bamboo: 3, clt: 1 } }
                 ]
             },
             // Q2: rammed_earth, algae, bacterial_cellulose, biochar, rice_straw
@@ -699,31 +699,31 @@
                 options: [
                     { text: "Bounce back quickly, it doesn't stick to me", scores: { cork: 3, hempcrete: 1 } },
                     { text: "Already moved on before they finished talking", scores: { bamboo: 3, algae: 1 } },
-                    { text: "Take what's useful, mutate, become something new", scores: { bacterial_cellulose: 3, algae: 1 } },
-                    { text: "Absorb it, process it deeply, let it change me", scores: { biochar: 3, rammed_earth: 1 } },
-                    { text: "Turn it into something useful, nothing goes to waste", scores: { rice_straw: 3, mycelium: 1 } }
+                    { text: "Take what's useful, change, become something new", scores: { bacterial_cellulose: 3, algae: 1 } },
+                    { text: "Absorb it, process it thoroughly, let it change me", scores: { biochar: 3, rammed_earth: 1 } },
+                    { text: "Turn it into something positive, see it as an opportunity to grow", scores: { rice_straw: 3, mycelium: 1 } }
                 ]
             },
             // Q7: mycelium, hempcrete, bamboo, algae, biochar
             {
                 question: "Pick a superpower:",
                 options: [
-                    { text: "Telepathic network with everyone you've ever met", scores: { mycelium: 3, algae: 1 } },
-                    { text: "Invulnerability, nothing can hurt you", scores: { hempcrete: 3, cork: 1 } },
-                    { text: "Super speed", scores: { bamboo: 3, clt: 1 } },
-                    { text: "Shapeshifting", scores: { algae: 3, bacterial_cellulose: 1 } },
-                    { text: "Ability to absorb and neutralize anything toxic", scores: { biochar: 3, mycelium: 1 } }
+                    { text: "Telepathy: Read and project thoughts instantly.", scores: { mycelium: 3, algae: 1 } },
+                    { text: "Invincibility: Cannot be harmed by anything.", scores: { hempcrete: 3, cork: 1 } },
+                    { text: "Super speed: Move faster than anyone can see.", scores: { bamboo: 3, clt: 1 } },
+                    { text: "Shapeshifting: Transform your body into anything.", scores: { algae: 3, bacterial_cellulose: 1 } },
+                    { text: "Healing: Cure any sickness, injury, or disease.", scores: { biochar: 3, mycelium: 1 } }
                 ]
             },
             // Q8: clt, rammed_earth, cork, bacterial_cellulose, rice_straw
             {
                 question: "In a group project, you're the one who:",
                 options: [
-                    { text: "Creates the structure and keeps everyone on track", scores: { clt: 3, bamboo: 1 } },
+                    { text: "Plans the agenda and keeps everyone on track", scores: { clt: 3, bamboo: 1 } },
                     { text: "Provides the foundation everyone else builds on", scores: { rammed_earth: 3, biochar: 1 } },
-                    { text: "Keeps morale up and smooths over conflicts", scores: { cork: 3, mycelium: 1 } },
+                    { text: "Keeps morale up and mediates any conflicts", scores: { cork: 3, mycelium: 1 } },
                     { text: "Brings the wild ideas no one else would think of", scores: { bacterial_cellulose: 3, algae: 1 } },
-                    { text: "Makes something great from the scraps others leave behind", scores: { rice_straw: 3, hempcrete: 1 } }
+                    { text: "Makes something great from something others tend to overlook", scores: { rice_straw: 3, hempcrete: 1 } }
                 ]
             },
             // Q9: mycelium, rammed_earth, hempcrete, bacterial_cellulose, rice_straw
@@ -733,7 +733,7 @@
                     { text: "Talk it out with a bunch of different people", scores: { mycelium: 3, cork: 1 } },
                     { text: "Go quiet, turn inward, process slowly", scores: { rammed_earth: 3, biochar: 1 } },
                     { text: "Honestly? Take a nap, drink some water, it'll pass", scores: { hempcrete: 3, cork: 1 } },
-                    { text: "Channel it into making something weird", scores: { bacterial_cellulose: 3, algae: 1 } },
+                    { text: "Distract yourself. Do something fun!", scores: { bacterial_cellulose: 3, algae: 1 } },
                     { text: "Get practical, clean, organize, do something useful", scores: { rice_straw: 3, clt: 1 } }
                 ]
             },
@@ -765,12 +765,12 @@
                 options: [
                     { text: "\"You know everyone, you're so connected\"", scores: { mycelium: 3, cork: 1 } },
                     { text: "\"You're so reliable, I can always count on you\"", scores: { clt: 3, rammed_earth: 1 } },
-                    { text: "\"You're timeless, like you've always been here\"", scores: { rammed_earth: 3, biochar: 1 } },
-                    { text: "\"You're ahead of your time\"", scores: { algae: 3, bacterial_cellulose: 1 } },
-                    { text: "\"You make something from nothing, so resourceful\"", scores: { rice_straw: 3, hempcrete: 1 } }
+                    { text: "\"Your presence is so calming. You ground me\"", scores: { rammed_earth: 3, biochar: 1 } },
+                    { text: "\"You're always one step ahead. How do you do it?\"", scores: { algae: 3, bacterial_cellulose: 1 } },
+                    { text: "\"You always make the most out of anything. You never complain!\"", scores: { rice_straw: 3, hempcrete: 1 } }
                 ]
             }
-        ];
+        ];$
 
         const materials = {
             mycelium: {
